// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createScene() actions.notFound(state): 13 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/not-found-foo",
          "scene": "",
          "search": "",
          "url": "/not-found-foo",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {
          "foo": "bar",
        },
        "type": "NOT_FOUND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/not-found-foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "",
    "search": "",
    "status": 404,
    "url": "/not-found-foo",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {
    "foo": "bar",
  },
  "type": "NOT_FOUND",
}
`;

exports[`createScene() actions.notFound(state): 13 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() actions.notFound(state): 13 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() actions.notFound(state): 13 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() actions.notFound(state): 13 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() actions.notFound(state): 13 - routes - SECOND - error 1`] = `0`;

exports[`createScene() actions.notFound(state): 13 - routes - THIRD - action 1`] = `0`;

exports[`createScene() actions.notFound(state): 13 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/not-found-foo",
          "scene": "",
          "search": "",
          "url": "/not-found-foo",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {
          "foo": "bar",
        },
        "type": "NOT_FOUND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/not-found-foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "foo": "bar",
    },
    "status": 404,
    "type": "NOT_FOUND",
    "universal": false,
    "url": "/not-found-foo",
  },
  "title": "NOT_FOUND",
}
`;

exports[`createScene() actions.notFound(state): 13 - title 1`] = `"NOT_FOUND"`;

exports[`createScene() actions.notFound.complete(payload): 14 - response 1`] = `
Object {
  "basename": undefined,
  "payload": "foo",
  "type": "NOT_FOUND_COMPLETE",
}
`;

exports[`createScene() actions.notFound.complete(payload): 14 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() actions.notFound.complete(payload): 14 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() actions.notFound.complete(payload): 14 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() actions.notFound.complete(payload): 14 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() actions.notFound.complete(payload): 14 - routes - SECOND - error 1`] = `0`;

exports[`createScene() actions.notFound.complete(payload): 14 - routes - THIRD - action 1`] = `0`;

exports[`createScene() actions.notFound.complete(payload): 14 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "NOT_FOUND_COMPLETE - \\"foo\\"",
}
`;

exports[`createScene() actions.notFound.complete(payload): 14 - title 1`] = `"FIRST"`;

exports[`createScene() actions.second(): 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`createScene() actions.second(): 1 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() actions.second(): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() actions.second(): 1 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() actions.second(): 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() actions.second(): 1 - routes - SECOND - error 1`] = `0`;

exports[`createScene() actions.second(): 1 - routes - THIRD - action 1`] = `0`;

exports[`createScene() actions.second(): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`createScene() actions.second(): 1 - title 1`] = `"SECOND"`;

exports[`createScene() actions.second(action with wrong type): 5 - response 1`] = `
Object {
  "basename": undefined,
  "type": "WRONG",
}
`;

exports[`createScene() actions.second(action with wrong type): 5 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() actions.second(action with wrong type): 5 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() actions.second(action with wrong type): 5 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() actions.second(action with wrong type): 5 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() actions.second(action with wrong type): 5 - routes - SECOND - error 1`] = `0`;

exports[`createScene() actions.second(action with wrong type): 5 - routes - THIRD - action 1`] = `0`;

exports[`createScene() actions.second(action with wrong type): 5 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "WRONG",
}
`;

exports[`createScene() actions.second(action with wrong type): 5 - title 1`] = `"FIRST"`;

exports[`createScene() actions.second(params): 3 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/bar",
          "scene": "",
          "search": "",
          "url": "/second/bar",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/second/bar",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second/bar",
  },
  "params": Object {
    "foo": "bar",
  },
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`createScene() actions.second(params): 3 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() actions.second(params): 3 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() actions.second(params): 3 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() actions.second(params): 3 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() actions.second(params): 3 - routes - SECOND - error 1`] = `0`;

exports[`createScene() actions.second(params): 3 - routes - THIRD - action 1`] = `0`;

exports[`createScene() actions.second(params): 3 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/bar",
          "scene": "",
          "search": "",
          "url": "/second/bar",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/second/bar",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second/bar",
  },
  "title": "SECOND",
}
`;

exports[`createScene() actions.second(params): 3 - title 1`] = `"SECOND"`;

exports[`createScene() actions.second(partialAction): 2 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/bar",
          "scene": "",
          "search": "",
          "url": "/second/bar",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/second/bar",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second/bar",
  },
  "params": Object {
    "foo": "bar",
  },
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`createScene() actions.second(partialAction): 2 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() actions.second(partialAction): 2 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() actions.second(partialAction): 2 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() actions.second(partialAction): 2 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() actions.second(partialAction): 2 - routes - SECOND - error 1`] = `0`;

exports[`createScene() actions.second(partialAction): 2 - routes - THIRD - action 1`] = `0`;

exports[`createScene() actions.second(partialAction): 2 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/bar",
          "scene": "",
          "search": "",
          "url": "/second/bar",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/second/bar",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second/bar",
  },
  "title": "SECOND",
}
`;

exports[`createScene() actions.second(partialAction): 2 - title 1`] = `"SECOND"`;

exports[`createScene() actions.second(thunk): 4 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/FIRST",
          "scene": "",
          "search": "",
          "url": "/second/FIRST",
        },
        "params": Object {
          "foo": "FIRST",
        },
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/second/FIRST",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second/FIRST",
  },
  "params": Object {
    "foo": "FIRST",
  },
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`createScene() actions.second(thunk): 4 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() actions.second(thunk): 4 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() actions.second(thunk): 4 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() actions.second(thunk): 4 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() actions.second(thunk): 4 - routes - SECOND - error 1`] = `0`;

exports[`createScene() actions.second(thunk): 4 - routes - THIRD - action 1`] = `0`;

exports[`createScene() actions.second(thunk): 4 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/FIRST",
          "scene": "",
          "search": "",
          "url": "/second/FIRST",
        },
        "params": Object {
          "foo": "FIRST",
        },
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "foo": "FIRST",
    },
    "pathname": "/second/FIRST",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second/FIRST",
  },
  "title": "SECOND",
}
`;

exports[`createScene() actions.second(thunk): 4 - title 1`] = `"SECOND"`;

exports[`createScene() actions.second.complete(thunk): 11 - response 1`] = `
Object {
  "basename": undefined,
  "payload": Object {
    "foo": "bar",
  },
  "type": "SECOND_COMPLETE",
}
`;

exports[`createScene() actions.second.complete(thunk): 11 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() actions.second.complete(thunk): 11 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() actions.second.complete(thunk): 11 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() actions.second.complete(thunk): 11 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() actions.second.complete(thunk): 11 - routes - SECOND - error 1`] = `0`;

exports[`createScene() actions.second.complete(thunk): 11 - routes - THIRD - action 1`] = `0`;

exports[`createScene() actions.second.complete(thunk): 11 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SECOND_COMPLETE - {\\"foo\\":\\"bar\\"}",
}
`;

exports[`createScene() actions.second.complete(thunk): 11 - title 1`] = `"FIRST"`;

exports[`createScene() actions.third.complete(payload): 10 - response 1`] = `
Object {
  "basename": undefined,
  "payload": Object {
    "foo": "bar",
  },
  "type": "THIRD_COMPLETE",
}
`;

exports[`createScene() actions.third.complete(payload): 10 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() actions.third.complete(payload): 10 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() actions.third.complete(payload): 10 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() actions.third.complete(payload): 10 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() actions.third.complete(payload): 10 - routes - SECOND - error 1`] = `0`;

exports[`createScene() actions.third.complete(payload): 10 - routes - THIRD - action 1`] = `0`;

exports[`createScene() actions.third.complete(payload): 10 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "THIRD_COMPLETE - {\\"foo\\":\\"bar\\"}",
}
`;

exports[`createScene() actions.third.complete(payload): 10 - title 1`] = `"FIRST"`;

exports[`createScene() actions.third.error(new Error): 8 - response 1`] = `
Object {
  "basename": undefined,
  "error": [Error: fail],
  "type": "THIRD_ERROR",
}
`;

exports[`createScene() actions.third.error(new Error): 8 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() actions.third.error(new Error): 8 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() actions.third.error(new Error): 8 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() actions.third.error(new Error): 8 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() actions.third.error(new Error): 8 - routes - SECOND - error 1`] = `0`;

exports[`createScene() actions.third.error(new Error): 8 - routes - THIRD - action 1`] = `0`;

exports[`createScene() actions.third.error(new Error): 8 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "error": [Error: fail],
    "errorType": "THIRD_ERROR",
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "THIRD_ERROR",
}
`;

exports[`createScene() actions.third.error(new Error): 8 - title 1`] = `"FIRST"`;

exports[`createScene() route with just action creator: 12 - response 1`] = `
Object {
  "basename": undefined,
  "payload": Object {
    "foo": "hello",
  },
  "type": "PLAIN",
}
`;

exports[`createScene() route with just action creator: 12 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() route with just action creator: 12 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() route with just action creator: 12 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() route with just action creator: 12 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() route with just action creator: 12 - routes - SECOND - error 1`] = `0`;

exports[`createScene() route with just action creator: 12 - routes - THIRD - action 1`] = `0`;

exports[`createScene() route with just action creator: 12 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "PLAIN - {\\"foo\\":\\"hello\\"}",
}
`;

exports[`createScene() route with just action creator: 12 - title 1`] = `"PLAIN - {\\"foo\\":\\"hello\\"}"`;

exports[`createScene() route.action - custom action creator: 6 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third/baz",
          "scene": "",
          "search": "",
          "url": "/third/baz",
        },
        "params": Object {
          "foo": "baz",
        },
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/third/baz",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/third/baz",
  },
  "params": Object {
    "foo": "baz",
  },
  "query": Object {},
  "state": Object {},
  "type": "THIRD",
}
`;

exports[`createScene() route.action - custom action creator: 6 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() route.action - custom action creator: 6 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() route.action - custom action creator: 6 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() route.action - custom action creator: 6 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() route.action - custom action creator: 6 - routes - SECOND - error 1`] = `0`;

exports[`createScene() route.action - custom action creator: 6 - routes - THIRD - action 1`] = `0`;

exports[`createScene() route.action - custom action creator: 6 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third/baz",
          "scene": "",
          "search": "",
          "url": "/third/baz",
        },
        "params": Object {
          "foo": "baz",
        },
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "foo": "baz",
    },
    "pathname": "/third/baz",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "THIRD",
    "universal": false,
    "url": "/third/baz",
  },
  "title": "THIRD",
}
`;

exports[`createScene() route.action - custom action creator: 6 - title 1`] = `"THIRD"`;

exports[`createScene() route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/fourth/baz",
          "scene": "",
          "search": "",
          "url": "/fourth/baz",
        },
        "params": Object {
          "foo": "baz",
        },
        "query": Object {},
        "state": Object {},
        "type": "FOURTH",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/fourth/baz",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/fourth/baz",
  },
  "params": Object {
    "foo": "baz",
  },
  "query": Object {},
  "state": Object {},
  "type": "FOURTH",
}
`;

exports[`createScene() route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - SECOND - error 1`] = `0`;

exports[`createScene() route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - THIRD - action 1`] = `0`;

exports[`createScene() route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/fourth/baz",
          "scene": "",
          "search": "",
          "url": "/fourth/baz",
        },
        "params": Object {
          "foo": "baz",
        },
        "query": Object {},
        "state": Object {},
        "type": "FOURTH",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "foo": "baz",
    },
    "pathname": "/fourth/baz",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FOURTH",
    "universal": false,
    "url": "/fourth/baz",
  },
  "title": "FOURTH",
}
`;

exports[`createScene() route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - title 1`] = `"FOURTH"`;

exports[`createScene() route.error - custom error action creator: 9 - response 1`] = `
Object {
  "basename": undefined,
  "error": Object {
    "foo": "bar",
  },
  "type": "SECOND_ERROR",
}
`;

exports[`createScene() route.error - custom error action creator: 9 - routes - FOURTH - customCreator 1`] = `0`;

exports[`createScene() route.error - custom error action creator: 9 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene() route.error - custom error action creator: 9 - routes - PLAIN - action 1`] = `0`;

exports[`createScene() route.error - custom error action creator: 9 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene() route.error - custom error action creator: 9 - routes - SECOND - error 1`] = `0`;

exports[`createScene() route.error - custom error action creator: 9 - routes - THIRD - action 1`] = `0`;

exports[`createScene() route.error - custom error action creator: 9 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "error": Object {
      "foo": "bar",
    },
    "errorType": "SECOND_ERROR",
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SECOND_ERROR",
}
`;

exports[`createScene() route.error - custom error action creator: 9 - title 1`] = `"FIRST"`;
